# Madagascar-API-Library

./: PKGBUILD  README.md  meson.build
librsf/: meson.build
librsf/include/: meson.build
librsff90/: .sconsign  SConstruct  Session.vim  meson.build  ptr_sz.f90  ptr_sz.h  rsf.f90
librsff90/test/: rsf.h  rsf.mod
librsfpp/: .sconsign  SConstruct  meson.build
librsfpp/include/: meson.build
